--- a/package.json
+++ b/package.json
@@ -10,12 +10,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "@chakra-ui/react": "^1.8.8",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@types/react-grid-layout": "^1.3.2",
+    "axios": "^0.27.2",
+    "framer-motion": "^6.3.3",
+    "graphql": "^16.5.0",
+    "next": "12.1.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-grid-layout": "^1.3.4",
+    "react-use": "^17.3.2",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
-    "eslint": "7.31.0",
-    "eslint-config-next": "11.0.1"
+    "@types/node": "^17.0.32",
+    "@types/react": "^17.0.45",
+    "@types/react-dom": "^17.0.16",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.1.6",
+    "typescript": "^4.6.4"
   }
 }
