--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.2",
+    "@chakra-ui/icons": "^2.0.0",
     "@chakra-ui/react": "^1.8.8",
+    "@chakra-ui/system": "^2.0.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@types/react-grid-layout": "^1.3.2",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typed-document-node": "^2.2.11",
+    "@graphql-codegen/typescript": "^2.4.11",
+    "@graphql-codegen/typescript-operations": "^2.4.0",
     "axios": "^0.27.2",
     "framer-motion": "^6.3.3",
     "graphql": "^16.5.0",
@@ -28,6 +35,7 @@
     "@types/node": "^17.0.32",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
+    "@types/react-grid-layout": "^1.3.2",
     "eslint": "8.5.0",
     "eslint-config-next": "12.1.6",
     "typescript": "^4.6.4"
