--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@graphql-codegen/typescript": "^2.4.11",
     "@graphql-codegen/typescript-operations": "^2.4.0",
     "axios": "^0.27.2",
+    "dayjs": "^1.11.2",
     "framer-motion": "^6.3.3",
     "graphql": "^16.5.0",
     "next": "12.1.6",
