--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "17.0.2",
     "react-grid-layout": "^1.3.4",
     "react-use": "^17.3.2",
+    "sass": "^1.51.0",
     "swr": "^1.3.0"
   },
   "devDependencies": {
