--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-grid-layout": "^1.3.4",
+    "react-icons": "^4.3.1",
     "react-use": "^17.3.2",
     "sass": "^1.51.0",
     "swr": "^1.3.0"
