--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "dayjs": "^1.11.2",
     "framer-motion": "^6.3.3",
     "graphql": "^16.5.0",
+    "highlight.js": "^11.5.1",
+    "lodash-es": "^4.17.21",
+    "markdown-it": "^13.0.1",
     "next": "12.1.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -35,6 +38,8 @@
     "swr": "^1.3.0"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
+    "@types/markdown-it": "^12.2.3",
     "@types/node": "^17.0.32",
     "@types/react": "^17.0.45",
     "@types/react-dom": "^17.0.16",
