--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "generate": "graphql-codegen"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.8",
+    "@apollo/client": "^3.6.9",
+    "@babel/parser": "^7.18.5",
+    "@babel/traverse": "^7.18.5",
     "@chakra-ui/react": "^2.2.1",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
@@ -19,20 +21,24 @@
     "@graphql-codegen/typed-document-node": "^2.2.13",
     "@graphql-codegen/typescript": "^2.5.1",
     "@graphql-codegen/typescript-operations": "^2.4.2",
+    "@monaco-editor/react": "^4.4.5",
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
-    "framer-motion": "^6.3.11",
+    "framer-motion": "^6.3.13",
     "graphql": "^16.5.0",
     "highlight.js": "^11.5.1",
     "lodash-es": "^4.17.21",
     "markdown-it": "^13.0.1",
+    "monaco-editor": "^0.33.0",
+    "monaco-jsx-highlighter": "^2.0.4",
     "next": "12.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.4.0",
-    "sass": "^1.52.3",
-    "swr": "^1.3.0"
+    "sass": "^1.53.0",
+    "swr": "^1.3.0",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
@@ -41,8 +47,9 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@types/react-grid-layout": "^1.3.2",
+    "@types/react-resizable": "^3.0.1",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   }
 }
