--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -31,13 +31,14 @@
     "markdown-it": "^13.0.1",
     "monaco-editor": "^0.33.0",
     "monaco-jsx-highlighter": "^2.0.4",
-    "next": "12.1.6",
+    "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.4.0",
     "sass": "^1.53.0",
     "swr": "^1.3.0",
+    "use-pinch-ref": "^0.1.2",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
@@ -49,7 +50,7 @@
     "@types/react-grid-layout": "^1.3.2",
     "@types/react-resizable": "^3.0.1",
     "eslint": "8.16.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "12.2.0",
     "typescript": "^4.7.4"
   }
 }
