--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@babel/parser": "^7.18.5",
-    "@babel/traverse": "^7.18.5",
-    "@chakra-ui/react": "^2.2.1",
+    "@babel/parser": "^7.18.9",
+    "@babel/traverse": "^7.18.9",
+    "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@graphql-codegen/cli": "^2.6.2",
-    "@graphql-codegen/typed-document-node": "^2.2.13",
-    "@graphql-codegen/typescript": "^2.5.1",
-    "@graphql-codegen/typescript-operations": "^2.4.2",
+    "@graphql-codegen/cli": "^2.9.1",
+    "@graphql-codegen/typed-document-node": "^2.3.2",
+    "@graphql-codegen/typescript": "^2.7.2",
+    "@graphql-codegen/typescript-operations": "^2.5.2",
     "@monaco-editor/react": "^4.4.5",
     "axios": "^0.27.2",
-    "dayjs": "^1.11.3",
-    "framer-motion": "^6.3.13",
+    "dayjs": "^1.11.4",
+    "framer-motion": "^6.5.1",
     "graphql": "^16.5.0",
-    "highlight.js": "^11.5.1",
+    "highlight.js": "^11.6.0",
     "lodash-es": "^4.17.21",
     "markdown-it": "^13.0.1",
     "monaco-editor": "^0.33.0",
@@ -36,20 +36,20 @@
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.4.0",
-    "sass": "^1.53.0",
+    "sass": "^1.54.0",
     "swr": "^1.3.0",
     "use-pinch-ref": "^0.1.2",
-    "zustand": "^4.0.0-rc.1"
+    "zustand": "^4.0.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/node": "^18.6.1",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/react-grid-layout": "^1.3.2",
-    "@types/react-resizable": "^3.0.1",
-    "eslint": "8.16.0",
+    "@types/react-resizable": "^3.0.2",
+    "eslint": "^8.20.0",
     "eslint-config-next": "12.2.0",
     "typescript": "^4.7.4"
   }
