--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@graphql-codegen/typescript": "^2.7.2",
     "@graphql-codegen/typescript-operations": "^2.5.2",
     "@monaco-editor/react": "^4.4.5",
+    "@reactour/mask": "^0.5.1",
+    "@reactour/popover": "^0.5.0",
+    "@reactour/utils": "^0.4.0",
     "axios": "^0.27.2",
     "dayjs": "^1.11.4",
     "framer-motion": "^6.5.1",
@@ -49,8 +52,13 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-grid-layout": "^1.3.2",
     "@types/react-resizable": "^3.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
     "eslint-config-next": "12.2.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
 }
