--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@babel/parser": "^7.18.9",
+    "@babel/standalone": "^7.18.9",
     "@babel/traverse": "^7.18.9",
     "@chakra-ui/react": "^2.2.4",
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "@graphql-codegen/cli": "^2.9.1",
+    "@graphql-codegen/cli": "^2.11.2",
     "@graphql-codegen/typed-document-node": "^2.3.2",
     "@graphql-codegen/typescript": "^2.7.2",
     "@graphql-codegen/typescript-operations": "^2.5.2",
@@ -47,7 +48,7 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.6.1",
+    "@types/node": "^18.6.2",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-grid-layout": "^1.3.2",
