--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@babel/parser": "^7.18.9",
-    "@babel/standalone": "^7.18.9",
-    "@babel/traverse": "^7.18.9",
-    "@chakra-ui/react": "^2.2.4",
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@graphql-codegen/cli": "^2.11.2",
-    "@graphql-codegen/typed-document-node": "^2.3.2",
-    "@graphql-codegen/typescript": "^2.7.2",
-    "@graphql-codegen/typescript-operations": "^2.5.2",
+    "@babel/parser": "^7.18.11",
+    "@babel/standalone": "^7.18.12",
+    "@babel/traverse": "^7.18.11",
+    "@chakra-ui/react": "^2.2.8",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@graphql-codegen/cli": "^2.11.6",
+    "@graphql-codegen/typed-document-node": "^2.3.3",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
     "@monaco-editor/react": "^4.4.5",
-    "@reactour/mask": "^0.5.1",
-    "@reactour/popover": "^0.5.0",
+    "@reactour/mask": "^1.0.0",
+    "@reactour/popover": "^1.0.0",
     "@reactour/utils": "^0.4.0",
     "axios": "^0.27.2",
-    "dayjs": "^1.11.4",
+    "dayjs": "^1.11.5",
     "framer-motion": "^6.5.1",
     "graphql": "^16.5.0",
     "highlight.js": "^11.6.0",
@@ -35,12 +35,12 @@
     "markdown-it": "^13.0.1",
     "monaco-editor": "^0.33.0",
     "monaco-jsx-highlighter": "^2.0.4",
-    "next": "12.2.0",
+    "next": "^12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.4.0",
-    "sass": "^1.54.0",
+    "sass": "^1.54.4",
     "swr": "^1.3.0",
     "use-pinch-ref": "^0.1.2",
     "zustand": "^4.0.0"
@@ -48,15 +48,15 @@
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.6.2",
-    "@types/react": "^18.0.15",
+    "@types/node": "^18.7.4",
+    "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-grid-layout": "^1.3.2",
     "@types/react-resizable": "^3.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
-    "eslint-config-next": "12.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "eslint": "^8.22.0",
+    "eslint-config-next": "^12.2.5",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "prettier": "^2.7.1",
