--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.9",
-    "@babel/parser": "^7.18.11",
-    "@babel/standalone": "^7.18.12",
-    "@babel/traverse": "^7.18.11",
-    "@chakra-ui/react": "^2.2.8",
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
+    "@babel/parser": "^7.18.13",
+    "@babel/standalone": "^7.18.13",
+    "@babel/traverse": "^7.18.13",
+    "@chakra-ui/react": "^2.3.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@graphql-codegen/cli": "^2.11.6",
     "@graphql-codegen/typed-document-node": "^2.3.3",
     "@graphql-codegen/typescript": "^2.7.3",
     "@graphql-codegen/typescript-operations": "^2.5.3",
     "@monaco-editor/react": "^4.4.5",
-    "@reactour/mask": "^1.0.0",
-    "@reactour/popover": "^1.0.0",
-    "@reactour/utils": "^0.4.0",
+    "@reactour/mask": "^1.0.4",
+    "@reactour/popover": "^1.0.5",
+    "@reactour/utils": "^0.4.6",
     "axios": "^0.27.2",
     "dayjs": "^1.11.5",
     "framer-motion": "^6.5.1",
@@ -40,15 +40,16 @@
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.4.0",
+    "react-remove-scroll": "^2.5.5",
     "sass": "^1.54.5",
     "swr": "^1.3.0",
     "use-pinch-ref": "^0.1.2",
-    "zustand": "^4.1.0"
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.6",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.7.8",
+    "@types/node": "^18.7.14",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-grid-layout": "^1.3.2",
