--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "pnpm generate && pnpm build:packages && pnpm build:app",
     "build:app": "cd app && pnpm build",
     "build:packages": "ts-node ./scripts/rollupBuild.ts build",
+    "start": "cd app && pnpm start",
     "theme": "chakra-cli tokens ./app/src/theme/index.ts",
     "generate": "graphql-codegen --config packages/graphql/codegen.yaml",
     "test": "jest",
@@ -25,28 +26,28 @@
   },
   "devDependencies": {
     "@apollo/client": "^3.7.0",
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.19.6",
     "@chakra-ui/cli": "^2.1.8",
-    "@chakra-ui/react": "^2.3.5",
+    "@chakra-ui/react": "^2.3.6",
     "@chakra-ui/styled-system": "^2.3.4",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@graphql-codegen/add": "^3.2.1",
-    "@graphql-codegen/cli": "^2.13.6",
-    "@graphql-codegen/import-types-preset": "^2.2.4",
-    "@graphql-codegen/near-operation-file-preset": "^2.4.2",
-    "@graphql-codegen/typed-document-node": "^2.3.4",
-    "@graphql-codegen/typescript": "^2.7.4",
+    "@graphql-codegen/cli": "^2.13.8",
+    "@graphql-codegen/import-types-preset": "^2.2.5",
+    "@graphql-codegen/near-operation-file-preset": "^2.4.3",
+    "@graphql-codegen/typed-document-node": "^2.3.5",
+    "@graphql-codegen/typescript": "^2.8.0",
     "@graphql-codegen/typescript-operations": "^2.5.4",
     "@graphql-typed-document-node/core": "^3.1.1",
-    "@rollup/plugin-commonjs": "^23.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-replace": "^5.0.0",
-    "@swc/core": "^1.3.7",
-    "@types/jest": "^29.1.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@swc/core": "^1.3.11",
+    "@types/jest": "^29.2.0",
     "@types/lodash": "^4.14.186",
-    "@types/node": "^18.8.4",
-    "@types/react": "18.0.21",
+    "@types/node": "^18.11.7",
+    "@types/react": "18.0.24",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "axios": "^0.27.2",
@@ -54,21 +55,21 @@
     "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^27.1.1",
+    "eslint-plugin-jest": "^27.1.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
     "framer-motion": "^6.5.1",
     "graphql": "^16.6.0",
     "husky": "^8.0.1",
-    "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.1.2",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "lint-staged": "^13.0.3",
     "lodash": "^4.17.21",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rollup": "^3.1.0",
+    "rollup": "^3.2.3",
     "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
