--- a/package.json
+++ b/package.json
@@ -25,39 +25,29 @@
     "*.{ts,tsx}": "eslint --fix"
   },
   "devDependencies": {
-    "@apollo/client": "^3.7.10",
-    "@babel/core": "^7.21.0",
+    "@apollo/client": "^3.7.12",
+    "@babel/core": "^7.21.4",
     "@chakra-ui/cli": "^2.3.0",
-    "@chakra-ui/react": "^2.5.1",
-    "@chakra-ui/styled-system": "^2.6.1",
+    "@chakra-ui/react": "^2.5.5",
+    "@chakra-ui/styled-system": "^2.8.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@graphql-codegen/add": "^4.0.1",
-    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/cli": "^3.3.0",
     "@graphql-codegen/import-types-preset": "^2.2.6",
     "@graphql-codegen/near-operation-file-preset": "^2.5.0",
-    "@graphql-codegen/typed-document-node": "^3.0.2",
-    "@graphql-codegen/typescript": "^3.0.2",
-    "@graphql-codegen/typescript-operations": "^3.0.2",
-    "@graphql-typed-document-node/core": "^3.1.2",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-replace": "^5.0.2",
-    "@swc/core": "^1.3.39",
+    "@graphql-codegen/typed-document-node": "^4.0.0",
+    "@graphql-codegen/typescript": "^3.0.3",
+    "@graphql-codegen/typescript-operations": "^3.0.3",
+    "@graphql-typed-document-node/core": "^3.2.0",
+    "@swc/core": "^1.3.50",
     "@types/jest": "^29.2.2",
-    "@types/lodash": "^4.14.191",
-    "@types/node": "^18.15.0",
-    "@types/react": "18.0.28",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
-    "axios": "^0.27.2",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-import": "^2.27.5",
+    "@types/lodash": "^4.14.194",
+    "@types/node": "^18.15.11",
+    "@types/react": "18.0.35",
+    "eslint": "^8.38.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
     "framer-motion": "^6.5.1",
     "graphql": "^16.6.0",
     "husky": "^8.0.1",
@@ -65,13 +55,13 @@
     "jest-environment-jsdom": "^29.2.2",
     "lint-staged": "^13.0.4",
     "lodash": "^4.17.21",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.7",
+    "project-tool": "git+ssh://git@github.com:MrWangJustToDo/project-tool.git",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "rollup": "^3.19.1",
-    "rollup-plugin-typescript2": "^0.34.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
+    "tslib": "^2.5.0",
     "typescript": "^4.7.4"
   },
   "engines": {
