--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -37,6 +37,9 @@
   "dependencies": {
     "project-tool": "git+ssh://git@github.com:MrWangJustToDo/project-tool.git"
   },
+  "devDependencies": {
+    "typescript": "^4.7.4"
+  },
   "peerDependencies": {
     "@apollo/client": "^3.7.12",
     "@graphql-codegen/add": "^4.0.1",
