--- a/package.json
+++ b/package.json
@@ -21,31 +21,36 @@
     "purge": "pnpm -p -r -c exec rm -rf node_modules",
     "prepare": "husky install & pnpm clean"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --fix"
   },
   "devDependencies": {
-    "@apollo/client": "^3.7.12",
-    "@babel/core": "^7.21.4",
-    "@chakra-ui/cli": "^2.3.0",
-    "@chakra-ui/react": "^2.5.5",
-    "@chakra-ui/styled-system": "^2.8.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@apollo/client": "^3.7.14",
+    "@babel/core": "^7.21.8",
+    "@chakra-ui/cli": "^2.4.1",
+    "@chakra-ui/react": "^2.6.1",
+    "@chakra-ui/styled-system": "^2.9.0",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@graphql-codegen/add": "^4.0.1",
     "@graphql-codegen/cli": "^3.3.0",
     "@graphql-codegen/import-types-preset": "^2.2.6",
     "@graphql-codegen/near-operation-file-preset": "^2.5.0",
     "@graphql-codegen/typed-document-node": "^4.0.0",
-    "@graphql-codegen/typescript": "^3.0.3",
-    "@graphql-codegen/typescript-operations": "^3.0.3",
+    "@graphql-codegen/typescript": "^3.0.4",
+    "@graphql-codegen/typescript-operations": "^3.0.4",
     "@graphql-typed-document-node/core": "^3.2.0",
-    "@swc/core": "^1.3.50",
+    "@swc/core": "^1.3.56",
     "@types/jest": "^29.2.2",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
-    "@types/react": "18.0.35",
-    "eslint": "^8.38.0",
+    "@types/react": "18.2.6",
+    "eslint": "^8.40.0",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-node": "^11.1.0",
     "framer-motion": "^6.5.1",
@@ -53,9 +58,9 @@
     "husky": "^8.0.1",
     "jest": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
-    "lint-staged": "^13.0.4",
+    "lint-staged": "^13.2.2",
     "lodash": "^4.17.21",
-    "prettier": "^2.8.7",
+    "prettier": "^2.8.8",
     "project-tool": "git+ssh://git@github.com:MrWangJustToDo/project-tool.git",
     "react": "18.2.0",
     "react-dom": "18.2.0",
