--- a/app/package.json
+++ b/app/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^4.9.0",
     "react-remove-scroll": "^2.5.6",
     "react-resizable": "^3.0.5",
+    "reactivity-store": "^0.0.6",
     "use-pinch-ref": "^0.1.3",
     "zustand": "^4.3.8"
   },
