--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@monaco-editor/react": "^4.5.0",
+    "@my-react/react": "^0.2.0",
+    "@my-react/react-dom": "^0.2.0",
     "@reactour/mask": "^1.1.0",
     "@reactour/popover": "^1.1.1",
     "@reactour/utils": "^0.5.0",
@@ -40,12 +42,14 @@
     "react-icons": "^4.9.0",
     "react-remove-scroll": "^2.5.6",
     "react-resizable": "^3.0.5",
-    "reactivity-store": "^0.1.6",
+    "reactivity-store": "^0.1.7",
     "use-pinch-ref": "^0.1.3",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
+    "@my-react/react-refresh": "^0.2.0",
+    "@my-react/react-refresh-tools": "^0.0.2",
     "@types/lodash-es": "^4.17.7",
     "@types/markdown-it": "^12.2.3",
     "@types/node": "^18.15.11",
