fix deploy flow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       
       - name: build site
         run: |
-          pnpm install
+          pnpm install --frozen-lockfile
           pnpm build
           pnpm export
 
