--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@swc/core": "^1.3.100",
     "@types/jest": "^29.5.11",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.11.0",
     "@types/react": "18.2.45",
     "eslint": "^8.55.0",
     "eslint-plugin-jest": "^27.6.0",
@@ -61,7 +61,7 @@
     "lint-staged": "^15.2.0",
     "lodash": "^4.17.21",
     "prettier": "^3.1.1",
-    "project-tool": "git+ssh://git@github.com:MrWangJustToDo/project-tool.git",
+    "project-tool": "https://github.com/MrWangJustToDo/project-tool.git",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ts-jest": "^29.1.1",
