--- a/app/package.json
+++ b/app/package.json
@@ -30,7 +30,6 @@
     "graphql": "^16.8.0",
     "highlight.js": "^11.9.0",
     "lodash-es": "^4.17.21",
-    "markdown-it": "^14.0.0",
     "monaco-editor": "^0.45.0",
     "monaco-jsx-highlighter": "^2.0.4",
     "next": "^12.3.4",
@@ -40,9 +39,12 @@
     "react-dom": "18.2.0",
     "react-grid-layout": "^1.3.4",
     "react-icons": "^4.12.0",
+    "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.5.6",
     "react-resizable": "^3.0.5",
     "reactivity-store": "^0.3.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "use-pinch-ref": "^0.1.3",
     "zustand": "^4.4.1"
   },
@@ -51,7 +53,6 @@
     "@my-react/react-refresh": "^0.3.0",
     "@my-react/react-refresh-tools": "^0.0.9",
     "@types/lodash-es": "^4.17.12",
-    "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
