--- a/app/package.json
+++ b/app/package.json
@@ -46,6 +46,7 @@
     "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.5.9",
     "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^2.0.19",
     "reactivity-store": "^0.3.2",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
