--- a/app/package.json
+++ b/app/package.json
@@ -46,7 +46,7 @@
     "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.5.10",
     "react-resizable": "^3.0.5",
-    "react-resizable-panels": "^2.0.19",
+    "react-split": "^2.0.14",
     "reactivity-store": "^0.3.4",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
