revert chakra update

--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,8 @@
     "@babel/traverse": "^7.23.9",
     "@blog/chakra": "workspace:*",
     "@blog/graphql": "workspace:*",
-    "@chakra-ui/react": "^2.10.2",
-    "@chakra-ui/styled-system": "^2.11.2",
+    "@chakra-ui/react": "2.8.2",
+    "@chakra-ui/styled-system": "2.9.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@git-diff-view/core": "^0.0.18",
