--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@apollo/client": "^3.11.8",
     "@babel/core": "^7.23.9",
     "@chakra-ui/cli": "^2.5.5",
-    "@chakra-ui/react": "^2.10.2",
-    "@chakra-ui/styled-system": "^2.11.2",
+    "@chakra-ui/react": "2.8.2",
+    "@chakra-ui/styled-system": "2.9.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@graphql-codegen/add": "^5.0.3",
