--- a/app/package.json
+++ b/app/package.json
@@ -39,7 +39,6 @@
     "next-intl": "^3.19.0",
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
-    "react-arborist": "^3.4.0",
     "react-dom": "18.2.0",
     "react-github-calendar": "^4.4.1",
     "react-grid-layout": "^1.3.4",
@@ -48,6 +47,7 @@
     "react-remove-scroll": "^2.6.0",
     "react-resizable": "^3.0.5",
     "react-split": "^2.0.14",
+    "react-virtuoso": "^4.12.0",
     "reactivity-store": "^0.3.6",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
