--- a/app/package.json
+++ b/app/package.json
@@ -15,8 +15,8 @@
     "@babel/traverse": "^7.23.9",
     "@blog/chakra": "workspace:*",
     "@blog/graphql": "workspace:*",
-    "@chakra-ui/react": "2.8.2",
-    "@chakra-ui/styled-system": "2.9.2",
+    "@chakra-ui/react": "^2.10.3",
+    "@chakra-ui/styled-system": "2.12.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@git-diff-view/core": "^0.0.18",
@@ -40,8 +40,8 @@
     "nextjs-progressbar": "^0.0.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-github-calendar": "^4.4.1",
-    "react-grid-layout": "^1.3.4",
+    "react-github-calendar": "^4.5.1",
+    "react-grid-layout": "^1.5.0",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.6.0",
