--- a/app/package.json
+++ b/app/package.json
@@ -38,6 +38,7 @@
     "next": "^12.3.4",
     "next-intl": "^3.26.3",
     "nextjs-progressbar": "^0.0.16",
+    "overlayscrollbars": "^2.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-calendar": "^4.5.2",
