--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^6.5.1",
     "graphql": "^16.10.0",
     "highlight.js": "^11.11.0",
+    "lucide-react": "^0.508.0",
     "lodash-es": "^4.17.21",
     "monaco-editor": "^0.46.0",
     "monaco-jsx-highlighter": "^2.77.77",
@@ -42,8 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-calendar": "^4.5.2",
-    "react-grid-layout": "^1.5.0",
-    "react-icons": "^5.4.0",
+    "react-grid-layout": "^1.5.1",
     "react-markdown": "^9.0.1",
     "react-remove-scroll": "^2.6.2",
     "react-resizable": "^3.0.5",
